esta funcionando tudo porem ainda precisa aparecer dependentes nas vacinas tomadas

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -7,6 +7,7 @@
 <body>
     <h1>Bem-vindo ao Dashboard</h1>
     <a href="/lista-vacinas">Ver Lista de Vacinas</a>
+    <a href="/vacinas-usuarios">Vacinas Tomadas</a>
     <a href="/gerenciar-dependentes">Gerenciar Dependentes</a>
     <a href="/vincular-dependentes">Vincular Dependentes</a>
     <a href="/logout">Sair</a>
