tela adicionar vacina funcinado - precisa testar lado usuario

--- a/views/admin-dashboard.ejs
+++ b/views/admin-dashboard.ejs
@@ -10,7 +10,7 @@
     <nav>
         <ul>
             <li><a href="/admin/usuarios">Gerenciar Usuários</a></li>
-            <li><a href="/admin/vacinas">Gerenciar Vacinas</a></li>
+            <li><a href="/admin-vacinas">Gerenciar Vacinas</a></li>
             <li><a href="/admin-logout">Sair</a></li>
         </ul>
     </nav>
