--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -5,7 +5,7 @@
     <title>Dashboard</title>
 </head>
 <body>
-    <h1>Bem-vindo ao Dashboard</h1>
+    <h1>Bem-vindo, <%= usuario.nome_completo %>!</h1>
     <a href="/lista-vacinas">Ver Lista de Vacinas</a>
     <a href="/vacinas-usuarios">Vacinas Tomadas</a>
     <a href="/gerenciar-dependentes">Gerenciar Dependentes</a>
@@ -13,3 +13,5 @@
     <a href="/logout">Sair</a>
 </body>
 </html>
+
+
