--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+    <link rel="stylesheet" href="/css/global.css">
+    <link rel="stylesheet" href="/css/login.css">
+    <link rel="stylesheet" href="/css/responsivo.css">
     <meta charset="UTF-8">
-    <title>Login</title>
+    <title>LOGIN VACISUS</title>
 </head>
 <body>
-    <h1>Login</h1>
-    <form action="/login" method="POST">
-        <label for="cpf">CPF:</label>
-        <input type="text" id="cpf" name="cpf" required><br>
+    <div class="container">
+        <h1>Login</h1>
+        <form action="/login" method="POST">
+            <label for="cpf">CPF:</label>
+            <input type="text" id="cpf" name="cpf" required><br>
 
-        <label for="senha">Senha:</label>
-        <input type="password" id="senha" name="senha" required><br>
+            <label for="senha">Senha:</label>
+            <input type="password" id="senha" name="senha" required><br>
 
-        <button type="submit">Entrar</button>
-    </form>
-    <a href="/cadastro">Cadastre-se</a>
+            <button type="submit">Entrar</button>
+        </form>
+        <a href="/cadastro">Cadastre-se</a>
+        <a href="/admin-login">Login Administradores</a>
+    </div>
 </body>
 </html>
