--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,7 +7,11 @@
     <meta charset="UTF-8">
     <title>LOGIN VACISUS</title>
 </head>
+    
 <body>
+    <header>
+        <img src="/images/logo3.png" alt="Logo" class="logo">
+    </header>
     <div class="container">
         <h1>Login</h1>
         <form action="/login" method="POST">
