--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,58 +1,65 @@
 /* login.css */
 
-/* Reseta margens e preenchimento padrão do navegador */
-body, html {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-  }
-  
-  body {
-    background-color: #B6E8D0; /* Cor de fundo da página de login */
+body {
+    background-color: #B6E8D0;
     display: flex;
-    justify-content: center; /* Centraliza horizontalmente */
-    align-items: center; /* Centraliza verticalmente */
-    font-family: Arial, sans-serif; /* Fonte padrão */
-  }
-  
-  .container {
-    background-color: #fff; /* Cor de fundo do contêiner */
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: Arial, sans-serif;
+    height: 100vh;
+    margin: 0;
+}
+
+header {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin-bottom: 20px; /* Espaço entre o logo e o contêiner */
+}
+
+.logo {
+    max-width: 200px; /* Ajuste conforme necessário */
+}
+
+.container {
+    background-color: #fff;
     padding: 20px;
-    border-radius: 8px; /* Bordas arredondadas do contêiner */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra do contêiner */
-    max-width: 400px; /* Limita a largura máxima do contêiner */
-    width: 100%; /* Garante que o contêiner use a largura disponível */
-    box-sizing: border-box; /* Inclui padding e bordas no cálculo da largura */
-  }
-  
-  h1 {
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: 400px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+h1 {
     font-size: 2.5rem;
     color: #0e9252;
     text-align: center;
     margin-bottom: 20px;
-  }
-  
-  form {
+}
+
+form {
     display: flex;
     flex-direction: column;
-  }
-  
-  label {
+}
+
+label {
     margin-bottom: 8px;
     font-size: 1rem;
     color: #033a20;
-  }
-  
-  input[type="text"], input[type="password"] {
+}
+
+input[type="text"], input[type="password"] {
     width: 100%;
     padding: 10px;
     margin-bottom: 15px;
     border: 1px solid #ddd;
     border-radius: 4px;
-    box-sizing: border-box; /* Inclui padding e bordas no cálculo da largura */
-  }
-  
-  button {
+    box-sizing: border-box;
+}
+
+button {
     width: 100%;
     padding: 10px;
     background-color: #0e9252;
@@ -61,22 +68,21 @@ body, html {
     border-radius: 4px;
     font-size: 1rem;
     cursor: pointer;
-  }
-  
-  button:hover {
+}
+
+button:hover {
     background-color: #0b7a42;
-  }
-  
-  a {
+}
+
+a {
     display: block;
     margin-top: 20px;
     text-align: center;
     font-size: 1rem;
     color: #1530f9;
     text-decoration: none;
-  }
-  
-  a:hover {
+}
+
+a:hover {
     text-decoration: underline;
-  }
-  
+}
