--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -1,42 +1,51 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+    <link rel="stylesheet" href="/css/global.css">
+    <link rel="stylesheet" href="/css/cadastro.css">
+    <link rel="stylesheet" href="/css/responsivo.css">
     <meta charset="UTF-8">
-    <title>Cadastro</title>
+    <title>CADASTRO</title>
     <script src="/js/validacao.js" defer></script>
 
 </head>
 <body>
-    <h1>Cadastro</h1>
-    <form action="/cadastro" method="POST">
-        <label for="nome">Nome completo:</label>
-        <input type="text" id="nome" name="nome" required><br>
+    <div class="logo-container">
+        <img src="/images/logo3.png" alt="Logo" class="logo">
+    </div>
+    <div class="container">
+        <h1>Cadastro</h1>
+        <form action="/cadastro" method="POST" id="form-cadastro">
+            
+            <label for="nome">Nome completo:</label>
+            <input type="text" id="nome" name="nome" required><br>
 
-        <label for="cpf">CPF:</label>
-        <input type="text" id="cpf" name="cpf" required><br>
+            <label for="cpf">CPF:</label>
+            <input type="text" id="cpf" name="cpf" required><br>
 
-        <label for="telefone">Telefone:</label>
-        <input type="text" id="telefone" name="telefone" required><br>
+            <label for="telefone">Telefone:</label>
+            <input type="text" id="telefone" name="telefone" required><br>
 
-        <label for="email">E-mail:</label>
-        <input type="email" id="email" name="email" required><br>
+            <label for="email">E-mail:</label>
+            <input type="email" id="email" name="email" required><br>
 
-        <label for="cartaoSUS">Cartão SUS:</label>
-        <input type="text" id="cartaoSUS" name="cartaoSUS" required><br>
+            <label for="cartaoSUS">Cartão SUS:</label>
+            <input type="text" id="cartaoSUS" name="cartaoSUS" required><br>
 
-        <label for="dataNascimento">Data de Nascimento:</label>
-        <input type="date" id="dataNascimento" name="dataNascimento" required><br>
+            <label for="dataNascimento">Data de Nascimento:</label>
+            <input type="date" id="dataNascimento" name="dataNascimento" required><br>
 
-        <label for="senha">Senha:</label>
-        <input type="password" id="senha" name="senha" required><br>
+            <label for="senha">Senha:</label>
+            <input type="password" id="senha" name="senha" required><br>
 
-        <label for="dependente">Dependente:</label>
-        <input type="checkbox" id="dependente" name="dependente"><br>
+            <label for="dependente">Dependente:</label>
+            <input type="checkbox" id="dependente" name="dependente"><br>
 
-        <label for="cpfGestor">CPF do Gestor:</label>
-        <input type="text" id="cpfGestor" name="cpfGestor"><br>
+            <label for="cpfGestor">CPF do Gestor:</label>
+            <input type="text" id="cpfGestor" name="cpfGestor"><br>
 
-        <button type="submit">Cadastrar</button>
-    </form>
+            <button type="submit">Cadastrar</button>
+        </form>
+    </div>    
 </body>
 </html>
