--- a/views/admin-dashboard.ejs
+++ b/views/admin-dashboard.ejs
@@ -3,16 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard de Funcionário</title>
+    <head>
+        <link rel="stylesheet" href="/css/global.css">
+        <link rel="stylesheet" href="/css/admin-dashboard.css">
+        <link rel="stylesheet" href="/css/responsivo.css">
+    </head>
+
+    <title>Dashboard dos Funcionários</title>
 </head>
 <body>
-    <h1>Dashboard de Funcionário</h1>
-    <nav>
-        <ul>
-            <li><a href="/admin/usuarios">Gerenciar Usuários</a></li>
-            <li><a href="/admin-vacinas">Gerenciar Vacinas</a></li>
-            <li><a href="/admin-logout">Sair</a></li>
-        </ul>
-    </nav>
+    <header>
+        <img src="/images/icone-logo.ico" alt="Logo" class="logo">
+    </header>
+    <div class="container">
+        <h1>Dashboard dos Funcionários</h1>
+        <nav>
+            <ul>
+                <li><a href="/admin/usuarios">Gerenciar Usuários</a></li>
+                <li><a href="/admin-vacinas">Gerenciar Vacinas</a></li>
+                <li><a href="/admin-logout">Sair</a></li>
+            </ul>
+        </nav>
+    </div>
 </body>
 </html>
