--- a/views/admin-login.ejs
+++ b/views/admin-login.ejs
@@ -3,20 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login de Funcionário</title>
+    <head>
+        <link rel="stylesheet" href="/css/global.css">
+        <link rel="stylesheet" href="/css/admin-login.css">
+        <link rel="stylesheet" href="/css/responsivo.css">
+    </head>
+
+    <title>Login dos Funcionários</title>
 </head>
 <body>
-    <h1>Login de Funcionário</h1>
-    <form action="/admin-login" method="POST">
-        <label for="username">Usuário:</label>
-        <input type="text" id="username" name="username" required><br>
-        <label for="password">Senha:</label>
-        <input type="password" id="password" name="password" required><br>
-        <button type="submit">Entrar</button>
-    </form>
-    <% if (mensagem) { %>
-        <p><%= mensagem %></p>
-    <% } %>
+    <header></header>
+        <img src="/images/logo3.png" alt="Logo" class="logo">
+    </header>
+    <div class="container">
+        <h1>Login dos Funcionários</h1>
+        <form action="/admin-login" method="POST">
+            <label for="username">Usuário:</label>
+            <input type="text" id="username" name="username" required><br>
+            <label for="password">Senha:</label>
+            <input type="password" id="password" name="password" required><br>
+            <button type="submit">Entrar</button>
+        </form>
+        <% if (mensagem) { %>
+            <p><%= mensagem %></p>
+        <% } %>
+    </div>
 </body>
 </html>
 
