--- a/views/admin-vacinas.ejs
+++ b/views/admin-vacinas.ejs
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <head>
+        <link rel="stylesheet" href="/css/global.css">
+        <link rel="stylesheet" href="/css/admin-vacinas.css">
+        <link rel="stylesheet" href="/css/responsivo.css">
+    </head>
+
     <title>Admin - Gerenciar Vacinas</title>
     <style>
         .container {
@@ -34,6 +41,10 @@
     </style>
 </head>
 <body>
+    <header>
+        <img src="/images/icone-logo.ico" alt="Logo" class="logo">
+    </header>
+
     <div class="container">
         <h1>Gerenciar Vacinas dos Usuários</h1>
         
