--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <title>Dashboard</title>
-</head>
-<body>
-    <h1>Bem-vindo, <%= usuario.nome_completo %>!</h1>
-    <a href="/lista-vacinas">Ver Lista de Vacinas</a>
-    <a href="/vacinas-usuarios">Vacinas Tomadas</a>
-    <a href="/gerenciar-dependentes">Gerenciar Dependentes</a>
-    <a href="/vincular-dependentes">Vincular Dependentes</a>
-    <a href="/logout">Sair</a>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <head>
+            <link rel="stylesheet" href="/css/global.css">
+            <link rel="stylesheet" href="/css/dashboard.css">
+            <link rel="stylesheet" href="/css/responsivo.css">
+        </head>
+        <title>Dashboard</title>
+    </head>
+    <body>
+        <header>
+            <img src="/images/icone-logo.ico" alt="Logo" class="logo">
+        </header>
+        <div class="container">
+            <h1>Bem-vindo, <%= usuario.nome_completo %>!</h1>
+            <a href="/vacinas-usuarios" class="btn">Vacinas Tomadas</a>
+            <a href="/gerenciar-dependentes" class="btn">Gerenciar Dependentes</a>
+            <a href="/vincular-dependentes" class="btn">Vincular Dependentes</a>
+            <a href="/lista-vacinas" class="btn">Ver Lista de Vacinas</a>
+            <a href="/logout" class="btn">Sair</a>
+        </div>
+    </body>
 </html>
 
 
